--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ elseif(CONFIG_LV_TFT_DISPLAY_CONTROLLER_IL3820)
     list(APPEND SOURCES "lvgl_tft/il3820.c")
 elseif(CONFIG_LV_TFT_DISPLAY_CONTROLLER_SSD1680)
     list(APPEND SOURCES "lvgl_tft/ssd1680.c")
+elseif(CONFIG_LV_TFT_DISPLAY_CONTROLLER_SSD1675)
+    list(APPEND SOURCES "lvgl_tft/ssd1675.c")
 elseif(CONFIG_LV_TFT_DISPLAY_CONTROLLER_JD79653A)
     list(APPEND SOURCES "lvgl_tft/jd79653a.c")
 elseif(CONFIG_LV_TFT_DISPLAY_CONTROLLER_UC8151D)
